--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,17 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+### Eclipse ###
+**/.classpath
+**/.project
+**/.settings
+**/build/
+**/.orig
+**/.factorypath
+**/.sts4-cache/
+**/.springBeans
+**/bin/
+
 # Package Files #
 *.jar
 *.war
@@ -21,3 +32,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
